Added a new feature - Direct I/O Access (#131).